<resources>
    <string name="app_name">ToDoTask</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="add_task">Add Your Task</string>
    <string name="update_task">Update Your Task</string>
    <string name="editText_Hint">Type Task Here</string>
    <string name="pickDate_text">Set Deadline</string>
    <string name="add_button">Add</string>
    <string name="update_button">Update</string>

    <string-array name="task_priorities">
        <item>High Priority</item>
        <item>Medium Priority</item>
        <item>Low Priority</item>
    </string-array>
    <string name="delete_snackBar">Your task has been deleted</string>
    <string name="dismiss_snackBar">DISMISS</string>
    <string name="menu_search">Search Tasks</string>
    <string name="menu_sort">Sort tasks by High Priority</string>
    <string name="menu_delete">Delete all tasks</string>
    <string name="menu_delete_msg">Delete all tasks?</string>
    <string name="menu_delete_btn">Delete</string>
    <string name="menu_cancel_btn">Cancel</string>
</resources>